--- a/src/ConvNetSharp.Volume.GPU/ConvNetSharp.Volume.GPU.csproj
+++ b/src/ConvNetSharp.Volume.GPU/ConvNetSharp.Volume.GPU.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CudaHostMemoryRegion.cs" />
     <Compile Include="DataLocation.cs" />
     <Compile Include="Double\BuilderInstance.cs" />
     <Compile Include="Double\Volume.cs" />
